fixed misaligned external links

--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -56,8 +56,13 @@ a {
 .external {
 	@include column;
 	.links {
+		margin: 1vh;
 		display: flex;
 		flex-flow: row nowrap;
+		align-items: center;
+		h3 {
+			margin: auto;
+		}
 		img {
 			margin: 0 2vw;
 			max-height: 5vh;
